// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`issues.spec configPreset 1`] = `
{
  "config": {
    "punctuation": true,
    "ああ": "aa",
    "あー": "ā",
    "いい": "ii",
    "うう": "ū",
    "えい": "ei",
    "ええ": "ee",
    "おう": "ō",
    "おお": "ō",
    "し": "shi",
    "じ": "ji",
    "ち": "chi",
    "ぢ": "ji",
    "っち": "tchi",
    "つ": "tsu",
    "づ": "zu",
    "ふ": "fu",
    "ゐ": "i",
    "を": "o",
    "んあ": "n'a",
    "んば": "nba",
  },
  "table": {
    "ぁ": "a",
    "あ": "a",
    "ぃ": "i",
    "い": "i",
    "いぃ": "yi",
    "いぇ": "ye",
    "ぅ": "u",
    "う": "u",
    "うぁ": "wa",
    "うぃ": "wi",
    "うぅ": "wu",
    "うぇ": "we",
    "うぉ": "wo",
    "うゅ": "wyu",
    "ぇ": "e",
    "え": "e",
    "ぉ": "o",
    "お": "o",
    "か": "ka",
    "が": "ga",
    "き": "ki",
    "きぇ": "kye",
    "きゃ": "kya",
    "きゅ": "kyu",
    "きょ": "kyo",
    "ぎ": "gi",
    "ぎぇ": "gye",
    "ぎゃ": "gya",
    "ぎゅ": "gyu",
    "ぎょ": "gyo",
    "く": "ku",
    "くぁ": "kwa",
    "くぃ": "kwi",
    "くぅ": "kwu",
    "くぇ": "kwe",
    "くぉ": "kwo",
    "くゎ": "kwa",
    "ぐ": "gu",
    "ぐぁ": "gwa",
    "ぐぃ": "gwi",
    "ぐぅ": "gwu",
    "ぐぇ": "gwe",
    "ぐぉ": "gwo",
    "ぐゎ": "gwa",
    "け": "ke",
    "げ": "ge",
    "こ": "ko",
    "ご": "go",
    "さ": "sa",
    "ざ": "za",
    "し": "shi",
    "しぇ": "she",
    "しゃ": "sha",
    "しゅ": "shu",
    "しょ": "sho",
    "じ": "ji",
    "じぇ": "je",
    "じゃ": "ja",
    "じゅ": "ju",
    "じょ": "jo",
    "す": "su",
    "すぃ": "si",
    "ず": "zu",
    "ずぃ": "zi",
    "せ": "se",
    "ぜ": "ze",
    "そ": "so",
    "ぞ": "zo",
    "た": "ta",
    "だ": "da",
    "ち": "chi",
    "ちぇ": "che",
    "ちゃ": "cha",
    "ちゅ": "chu",
    "ちょ": "cho",
    "ぢ": "ji",
    "ぢぇ": "je",
    "ぢゃ": "ja",
    "ぢゅ": "ju",
    "ぢょ": "jo",
    "っ": "tu",
    "つ": "tsu",
    "つぁ": "tsa",
    "つぃ": "tsi",
    "つぇ": "tse",
    "つぉ": "tso",
    "つゅ": "tsyu",
    "づ": "zu",
    "づぁ": "zua",
    "づぃ": "zui",
    "づぇ": "zue",
    "づぉ": "zuo",
    "て": "te",
    "てぃ": "ti",
    "てぇ": "tee",
    "てゃ": "tea",
    "てゅ": "tyu",
    "てょ": "teo",
    "で": "de",
    "でぃ": "di",
    "でぇ": "dee",
    "でゃ": "dea",
    "でゅ": "dyu",
    "でょ": "deo",
    "と": "to",
    "とぅ": "tu",
    "ど": "do",
    "どぅ": "du",
    "な": "na",
    "に": "ni",
    "にぇ": "nye",
    "にゃ": "nya",
    "にゅ": "nyu",
    "にょ": "nyo",
    "ぬ": "nu",
    "ね": "ne",
    "の": "no",
    "は": "ha",
    "ば": "ba",
    "ぱ": "pa",
    "ひ": "hi",
    "ひぇ": "hye",
    "ひゃ": "hya",
    "ひゅ": "hyu",
    "ひょ": "hyo",
    "び": "bi",
    "びぇ": "bye",
    "びゃ": "bya",
    "びゅ": "byu",
    "びょ": "byo",
    "ぴ": "pi",
    "ぴぇ": "pye",
    "ぴゃ": "pya",
    "ぴゅ": "pyu",
    "ぴょ": "pyo",
    "ふ": "fu",
    "ふぁ": "fa",
    "ふぃ": "fi",
    "ふぇ": "fe",
    "ふぉ": "fo",
    "ふゃ": "fya",
    "ふゅ": "fyu",
    "ふょ": "fyo",
    "ぶ": "bu",
    "ぷ": "pu",
    "へ": "he",
    "べ": "be",
    "ぺ": "pe",
    "ほ": "ho",
    "ほぅ": "hu",
    "ぼ": "bo",
    "ぽ": "po",
    "ま": "ma",
    "み": "mi",
    "みぇ": "mye",
    "みゃ": "mya",
    "みゅ": "my",
    "みょ": "myo",
    "む": "mu",
    "め": "me",
    "も": "mo",
    "ゃ": "ya",
    "や": "ya",
    "ゅ": "yu",
    "ゆ": "yu",
    "ょ": "yo",
    "よ": "yo",
    "ら": "ra",
    "ら゚": "la",
    "り": "ri",
    "りぇ": "rye",
    "りゃ": "rya",
    "りゅ": "ryu",
    "りょ": "ryo",
    "り゚": "li",
    "る": "ru",
    "る゚": "lu",
    "れ": "re",
    "れ゚": "le",
    "ろ": "ro",
    "ろ゚": "lo",
    "ゎ": "wa",
    "わ": "wa",
    "わ゙": "va",
    "ゐ": "i",
    "ゐ゙": "vi",
    "ゑ": "e",
    "ゑ゙": "ve",
    "を": "o",
    "を゙": "vo",
    "ん": "n",
    "ゔ": "vu",
    "ゔぁ": "va",
    "ゔぃ": "vi",
    "ゔぇ": "ve",
    "ゔぉ": "vo",
    "ゔゃ": "vya",
    "ゔゅ": "vyu",
    "ゔょ": "vyo",
    "ヵ": "ka",
    "ヶ": "ke",
  },
}
`;

exports[`issues.spec configPreset 2`] = `
{
  "config": {
    "punctuation": true,
    "ああ": "aa",
    "あー": "ā",
    "いい": "ii",
    "うう": "ū",
    "えい": "ei",
    "ええ": "ee",
    "おう": "ō",
    "おお": "ō",
    "し": "shi",
    "じ": "ji",
    "ち": "chi",
    "ぢ": "ji",
    "っち": "tchi",
    "つ": "tsu",
    "づ": "zu",
    "ふ": "fu",
    "ゐ": "i",
    "を": "wo",
    "んあ": "n-a",
    "んば": "mba",
  },
  "table": {
    "ぁ": "a",
    "あ": "a",
    "ぃ": "i",
    "い": "i",
    "いぃ": "yi",
    "いぇ": "ye",
    "ぅ": "u",
    "う": "u",
    "うぁ": "wa",
    "うぃ": "wi",
    "うぅ": "wu",
    "うぇ": "we",
    "うぉ": "wo",
    "うゅ": "wyu",
    "ぇ": "e",
    "え": "e",
    "ぉ": "o",
    "お": "o",
    "か": "ka",
    "が": "ga",
    "き": "ki",
    "きぇ": "kye",
    "きゃ": "kya",
    "きゅ": "kyu",
    "きょ": "kyo",
    "ぎ": "gi",
    "ぎぇ": "gye",
    "ぎゃ": "gya",
    "ぎゅ": "gyu",
    "ぎょ": "gyo",
    "く": "ku",
    "くぁ": "kwa",
    "くぃ": "kwi",
    "くぅ": "kwu",
    "くぇ": "kwe",
    "くぉ": "kwo",
    "くゎ": "kwa",
    "ぐ": "gu",
    "ぐぁ": "gwa",
    "ぐぃ": "gwi",
    "ぐぅ": "gwu",
    "ぐぇ": "gwe",
    "ぐぉ": "gwo",
    "ぐゎ": "gwa",
    "け": "ke",
    "げ": "ge",
    "こ": "ko",
    "ご": "go",
    "さ": "sa",
    "ざ": "za",
    "し": "shi",
    "しぇ": "she",
    "しゃ": "sha",
    "しゅ": "shu",
    "しょ": "sho",
    "じ": "ji",
    "じぇ": "je",
    "じゃ": "ja",
    "じゅ": "ju",
    "じょ": "jo",
    "す": "su",
    "すぃ": "si",
    "ず": "zu",
    "ずぃ": "zi",
    "せ": "se",
    "ぜ": "ze",
    "そ": "so",
    "ぞ": "zo",
    "た": "ta",
    "だ": "da",
    "ち": "chi",
    "ちぇ": "che",
    "ちゃ": "cha",
    "ちゅ": "chu",
    "ちょ": "cho",
    "ぢ": "ji",
    "ぢぇ": "je",
    "ぢゃ": "ja",
    "ぢゅ": "ju",
    "ぢょ": "jo",
    "っ": "tu",
    "つ": "tsu",
    "つぁ": "tsa",
    "つぃ": "tsi",
    "つぇ": "tse",
    "つぉ": "tso",
    "つゅ": "tsyu",
    "づ": "zu",
    "づぁ": "zua",
    "づぃ": "zui",
    "づぇ": "zue",
    "づぉ": "zuo",
    "て": "te",
    "てぃ": "ti",
    "てぇ": "tee",
    "てゃ": "tea",
    "てゅ": "tyu",
    "てょ": "teo",
    "で": "de",
    "でぃ": "di",
    "でぇ": "dee",
    "でゃ": "dea",
    "でゅ": "dyu",
    "でょ": "deo",
    "と": "to",
    "とぅ": "tu",
    "ど": "do",
    "どぅ": "du",
    "な": "na",
    "に": "ni",
    "にぇ": "nye",
    "にゃ": "nya",
    "にゅ": "nyu",
    "にょ": "nyo",
    "ぬ": "nu",
    "ね": "ne",
    "の": "no",
    "は": "ha",
    "ば": "ba",
    "ぱ": "pa",
    "ひ": "hi",
    "ひぇ": "hye",
    "ひゃ": "hya",
    "ひゅ": "hyu",
    "ひょ": "hyo",
    "び": "bi",
    "びぇ": "bye",
    "びゃ": "bya",
    "びゅ": "byu",
    "びょ": "byo",
    "ぴ": "pi",
    "ぴぇ": "pye",
    "ぴゃ": "pya",
    "ぴゅ": "pyu",
    "ぴょ": "pyo",
    "ふ": "fu",
    "ふぁ": "fa",
    "ふぃ": "fi",
    "ふぇ": "fe",
    "ふぉ": "fo",
    "ふゃ": "fya",
    "ふゅ": "fyu",
    "ふょ": "fyo",
    "ぶ": "bu",
    "ぷ": "pu",
    "へ": "he",
    "べ": "be",
    "ぺ": "pe",
    "ほ": "ho",
    "ほぅ": "hu",
    "ぼ": "bo",
    "ぽ": "po",
    "ま": "ma",
    "み": "mi",
    "みぇ": "mye",
    "みゃ": "mya",
    "みゅ": "my",
    "みょ": "myo",
    "む": "mu",
    "め": "me",
    "も": "mo",
    "ゃ": "ya",
    "や": "ya",
    "ゅ": "yu",
    "ゆ": "yu",
    "ょ": "yo",
    "よ": "yo",
    "ら": "ra",
    "ら゚": "la",
    "り": "ri",
    "りぇ": "rye",
    "りゃ": "rya",
    "りゅ": "ryu",
    "りょ": "ryo",
    "り゚": "li",
    "る": "ru",
    "る゚": "lu",
    "れ": "re",
    "れ゚": "le",
    "ろ": "ro",
    "ろ゚": "lo",
    "ゎ": "wa",
    "わ": "wa",
    "わ゙": "va",
    "ゐ": "i",
    "ゐ゙": "vi",
    "ゑ": "e",
    "ゑ゙": "ve",
    "を": "wo",
    "を゙": "vo",
    "ん": "n",
    "ゔ": "vu",
    "ゔぁ": "va",
    "ゔぃ": "vi",
    "ゔぇ": "ve",
    "ゔぉ": "vo",
    "ゔゃ": "vya",
    "ゔゅ": "vyu",
    "ゔょ": "vyo",
    "ヵ": "ka",
    "ヶ": "ke",
  },
}
`;

exports[`issues.spec configPreset 3`] = `
{
  "config": {
    "configPreset": "traditional hepburn",
    "を": "wo",
    "んあ": "n-a",
    "んば": "mba",
  },
  "table": {
    "ぁ": "a",
    "あ": "a",
    "ぃ": "i",
    "い": "i",
    "いぃ": "yi",
    "いぇ": "ye",
    "ぅ": "u",
    "う": "u",
    "うぁ": "wa",
    "うぃ": "wi",
    "うぅ": "wu",
    "うぇ": "we",
    "うぉ": "wo",
    "うゅ": "wyu",
    "ぇ": "e",
    "え": "e",
    "ぉ": "o",
    "お": "o",
    "か": "ka",
    "が": "ga",
    "き": "ki",
    "きぇ": "kye",
    "きゃ": "kya",
    "きゅ": "kyu",
    "きょ": "kyo",
    "ぎ": "gi",
    "ぎぇ": "gye",
    "ぎゃ": "gya",
    "ぎゅ": "gyu",
    "ぎょ": "gyo",
    "く": "ku",
    "くぁ": "kwa",
    "くぃ": "kwi",
    "くぅ": "kwu",
    "くぇ": "kwe",
    "くぉ": "kwo",
    "くゎ": "kwa",
    "ぐ": "gu",
    "ぐぁ": "gwa",
    "ぐぃ": "gwi",
    "ぐぅ": "gwu",
    "ぐぇ": "gwe",
    "ぐぉ": "gwo",
    "ぐゎ": "gwa",
    "け": "ke",
    "げ": "ge",
    "こ": "ko",
    "ご": "go",
    "さ": "sa",
    "ざ": "za",
    "し": "si",
    "しぇ": "sye",
    "しゃ": "sya",
    "しゅ": "syu",
    "しょ": "syo",
    "じ": "zi",
    "じぇ": "zye",
    "じゃ": "zya",
    "じゅ": "zyu",
    "じょ": "zyo",
    "す": "su",
    "すぃ": "si",
    "ず": "zu",
    "ずぃ": "zi",
    "せ": "se",
    "ぜ": "ze",
    "そ": "so",
    "ぞ": "zo",
    "た": "ta",
    "だ": "da",
    "ち": "ti",
    "ちぇ": "tye",
    "ちゃ": "tya",
    "ちゅ": "tyu",
    "ちょ": "tyo",
    "ぢ": "di",
    "ぢぇ": "dye",
    "ぢゃ": "dya",
    "ぢゅ": "dyu",
    "ぢょ": "dyo",
    "っ": "tu",
    "つ": "tu",
    "つぁ": "tua",
    "つぃ": "tui",
    "つぇ": "tue",
    "つぉ": "tuo",
    "つゅ": "tuyu",
    "づ": "du",
    "づぁ": "dua",
    "づぃ": "dui",
    "づぇ": "due",
    "づぉ": "duo",
    "て": "te",
    "てぃ": "tei",
    "てぇ": "tee",
    "てゃ": "tea",
    "てゅ": "teu",
    "てょ": "teo",
    "で": "de",
    "でぃ": "dei",
    "でぇ": "dee",
    "でゃ": "dea",
    "でゅ": "deu",
    "でょ": "deo",
    "と": "to",
    "とぅ": "tou",
    "ど": "do",
    "どぅ": "dou",
    "な": "na",
    "に": "ni",
    "にぇ": "nye",
    "にゃ": "nya",
    "にゅ": "nyu",
    "にょ": "nyo",
    "ぬ": "nu",
    "ね": "ne",
    "の": "no",
    "は": "ha",
    "ば": "ba",
    "ぱ": "pa",
    "ひ": "hi",
    "ひぇ": "hye",
    "ひゃ": "hya",
    "ひゅ": "hyu",
    "ひょ": "hyo",
    "び": "bi",
    "びぇ": "bye",
    "びゃ": "bya",
    "びゅ": "byu",
    "びょ": "byo",
    "ぴ": "pi",
    "ぴぇ": "pye",
    "ぴゃ": "pya",
    "ぴゅ": "pyu",
    "ぴょ": "pyo",
    "ふ": "hu",
    "ふぁ": "hua",
    "ふぃ": "hui",
    "ふぇ": "hue",
    "ふぉ": "huo",
    "ふゃ": "huya",
    "ふゅ": "huyu",
    "ふょ": "huyo",
    "ぶ": "bu",
    "ぷ": "pu",
    "へ": "he",
    "べ": "be",
    "ぺ": "pe",
    "ほ": "ho",
    "ほぅ": "hu",
    "ぼ": "bo",
    "ぽ": "po",
    "ま": "ma",
    "み": "mi",
    "みぇ": "mye",
    "みゃ": "mya",
    "みゅ": "my",
    "みょ": "myo",
    "む": "mu",
    "め": "me",
    "も": "mo",
    "ゃ": "ya",
    "や": "ya",
    "ゅ": "yu",
    "ゆ": "yu",
    "ょ": "yo",
    "よ": "yo",
    "ら": "ra",
    "ら゚": "la",
    "り": "ri",
    "りぇ": "rye",
    "りゃ": "rya",
    "りゅ": "ryu",
    "りょ": "ryo",
    "り゚": "li",
    "る": "ru",
    "る゚": "lu",
    "れ": "re",
    "れ゚": "le",
    "ろ": "ro",
    "ろ゚": "lo",
    "ゎ": "wa",
    "わ": "wa",
    "わ゙": "va",
    "ゐ": "wi",
    "ゐ゙": "vi",
    "ゑ": "we",
    "ゑ゙": "ve",
    "を": "wo",
    "を゙": "vo",
    "ん": "n",
    "ゔ": "vu",
    "ゔぁ": "va",
    "ゔぃ": "vi",
    "ゔぇ": "ve",
    "ゔぉ": "vo",
    "ゔゃ": "vya",
    "ゔゅ": "vyu",
    "ゔょ": "vyo",
    "ヵ": "ka",
    "ヶ": "ke",
  },
}
`;

exports[`issues.spec ignoreUnSupported 1`] = `"不支援 𠮷𠬠𡬶𫗭𣛙𢎐 ...這類字🍔	🍕	🍖	🍗	🍘	🍙	🍚	🍛[Pixiv] Judo yuforia (5026941)(呉masahiro)] 高飛車na生徒会長oapuride従順調教 ☆﹐﹑veevee˚ㆍ ㅔㅣ ㅑㅣㅗ므ㅛㅕㅇㅁ ㅇㅜㅇ ㅏㅏ Whiskers ˶˃ᆺ˂˶"`;
